# study-allennlp

./: README.md  pyproject.toml  requirements.txt
tutorial/: simple_tagger.json
